testsuite/gnatprove/tests/SB21-007__crash/test.out
a-cfdlli.ads:393:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:16
a-cfdlli.ads:398:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:16
a-cofuma.ads:317:13: info: subprogram "Copy_Key" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:162, in instantiation at database.adb:16
a-cofuma.ads:318:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:162, in instantiation at database.adb:16
a-cofuse.ads:259:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at database.ads:23
a-cofuve.ads:98:13: info: subprogram "First" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:16
a-cofuve.ads:99:06: info: data dependencies proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:16
a-cofuve.ads:342:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:16
database.adb:16:04: error: "Item" is not writable
database.adb:16:04: error: instantiation error at a-cfdlli.ads:77
database.adb:16:04: error: instantiation error at a-cofuve.ads:342
database.adb:16:04: error: object was declared as not writable at a-cofuve.ads:342, instance at a-cfdlli.ads:77, instance at line 16
database.adb:21:04: info: initialization of "Database" proved
database.adb:22:04: info: initialization of "DB_Model" proved
database.ads:23:04: error: "Item" is not writable
database.ads:23:04: error: instantiation error at a-cofuse.ads:259
database.ads:23:04: error: object was declared as not writable at a-cofuse.ads:259, instance at line 23
gnatprove: error during flow analysis and proof
